# bert-llm-chat-app

./: .gitignore  README.md  TODO-LIST.md
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  apprunner.yaml  docker-compose.yml  main.py  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/endpoints/: __init__.py  health.py
backend/app/api/endpoints/ask_stream/: router.py  schemas.py  services.py
backend/faiss_index/: index.faiss  index.json
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ask/: page.tsx
frontend/components/: theme-toggle.tsx
frontend/components/chat/: chat-input.tsx  chat-message-list.tsx  chat-message.tsx  default-prompts.tsx  sources-sidebar.tsx
frontend/hooks/: use-chat.ts
frontend/lib/: default-prompts.ts
scripts/: .env.example  .gitignore  README.md  ingest.py  pyproject.toml
terraform/: .gitignore  README.md  ecr.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
