[tool.poetry]
name = "bert-llm-chat-backend"
version = "0.1.0"
description = "Backend FastAPI minimal"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
uvicorn = "0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
