[tool.poetry]
name = "bert-llm-chat-app-backend"
version = "0.1.0"
description = "FastAPI Backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.12.0"
faiss-cpu = "^1.12.0"
sentence-transformers = "^5.1.2"
groq = "^0.13.0"
python-multipart = "^0.0.17"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
